--- a/baitap.html
+++ b/baitap.html
@@ -11,7 +11,7 @@
         .container {
             width: 400px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 20px 5px;
             border: 2px solid #000;
             box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
         }
